--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,10 +39,10 @@ application.global=service.Global
 # db.default.password=""
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/sesebackgammon?characterEncoding=UTF-8"
-db.default.user=root
-db.default.password=""
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://localhost/sesebackgammon?characterEncoding=UTF-8"
+#db.default.user=root
+#db.default.password=""
 
 # Evolutions
 # ~~~~~
